--- a/index.html
+++ b/index.html
@@ -1,16 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZAPT.AI</title>
-    <link
-      rel="icon"
-      href="https://supabase.zapt.ai/storage/v1/render/image/public/icons/7a7d72c4-32b4-45a8-937b-0d2ab248ae7b/95f5ce22-ae3f-4ad8-af77-d0c3884ee556.png?width=512&height=512"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+
+<head>
+
+  <script type="text/javascript">
+    var _iub = _iub || [];
+    _iub.csConfiguration = { "askConsentAtCookiePolicyUpdate": true, "countryDetection": true, "enableLgpd": true, "enableTcf": true, "enableUspr": true, "floatingPreferencesButtonDisplay": "bottom-left", "googleAdditionalConsentMode": true, "lang": "en-GB", "lgpdAppliesGlobally": false, "perPurposeConsent": true, "siteId": 3179716, "tcfPurposes": { "2": "consent_only", "3": "consent_only", "4": "consent_only", "5": "consent_only", "6": "consent_only", "7": "consent_only", "8": "consent_only", "9": "consent_only", "10": "consent_only" }, "whitelabel": false, "cookiePolicyId": 25363091, "banner": { "acceptButtonDisplay": true, "closeButtonDisplay": false, "customizeButtonDisplay": true, "explicitWithdrawal": true, "listPurposes": true, "position": "float-top-center", "rejectButtonDisplay": true, "showPurposesToggles": true } };
+  </script>
+  <script type="text/javascript" src="//cs.iubenda.com/sync/3179716.js"></script>
+  <script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/stub-v2.js"></script>
+  <script type="text/javascript" src="//cdn.iubenda.com/cs/tcf/safe-tcf-v2.js"></script>
+  <script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+  <script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+
+
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+
+  <!-- Meta tags for SEO -->
+  <meta name="description" content="ZAPT - Create AI apps in seconds without coding. Transform your ideas into powerful AI applications effortlessly." />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "ZAPT",
+      "description": "Create AI apps in seconds without coding. Transform your ideas into powerful AI applications effortlessly.",
+      "applicationCategory": "AI Development Tool"
+    }
+  </script>
+  <meta property="description" content="Effortless AI App Creation" />
+  <meta name="keywords" content="ChatGPT, AI, ZAPT, Chatbot, App Store, GPT, OpenAI" />
+
+  <!-- Open Graph meta tags for Facebook and LinkedIn -->
+  <meta property="og:title" content="ZAPT" />
+  <meta property="og:description" content="Effortless AI App Creation" />
+  <meta property="og:image"
+    content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
+  <meta property="og:url" content="https://www.zapt.ai/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ZAPT" />
+  <meta name="twitter:description" content="Effortless AI App Creation" />
+  <meta name="twitter:image"
+    content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
+
+  <title>ZAPT - Create AI Apps in Seconds | No Coding Required</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+    crossorigin="anonymous">
+
+  <!-- Google tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW5HTXTBR9">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-CW5HTXTBR9');
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "ZAPT",
+    "url": "https://www.zapt.ai/",
+    "logo": "https://www.zapt.ai/assets/logo-ae5eca61.png",
+    "sameAs": "https://www.linkedin.com/company/zapt-ai/"
+  }
+  </script>
+
+</head>
+
+<body class="m-0 p-0">
+  <div id="root"></div>
+
+  <script src="/src/index.jsx" type="module"></script>
+
+  <!-- Custom body code -->
+  <script>
+    window.intercomSettings = {
+      api_base: "https://api-iam.intercom.io",
+      app_id: "mj9vqjm3"
+    };
+  </script>
+
+  <script>
+    if (window.location.host === 'www.zapt.ai') {
+      // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/mj9vqjm3'
+      (function () { var w = window; var ic = w.Intercom; if (typeof ic === "function") { ic('reattach_activator'); ic('update', w.intercomSettings); } else { var d = document; var i = function () { i.c(arguments); }; i.q = []; i.c = function (args) { i.q.push(args); }; w.Intercom = i; var l = function () { var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://widget.intercom.io/widget/mj9vqjm3'; var x = d.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x); }; if (document.readyState === 'complete') { l(); } else if (w.attachEvent) { w.attachEvent('onload', l); } else { w.addEventListener('load', l, false); } } })();
+    }
+  </script>
+
+  <!-- LinkedIn Insight Tag -->
+  <script type="text/javascript">
+    _linkedin_partner_id = "5851066";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+  </script>
+  <script type="text/javascript">
+    (function (l) {
+      if (!l) {
+        window.lintrk = function (a, b) { window.lintrk.q.push([a, b]) };
+        window.lintrk.q = []
+      }
+      var s = document.getElementsByTagName("script")[0];
+      var b = document.createElement("script");
+      b.type = "text/javascript"; b.async = true;
+      b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+      s.parentNode.insertBefore(b, s);
+    })(window.lintrk);
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none;" alt=""
+      src="https://px.ads.linkedin.com/collect/?pid=5851066&fmt=gif" />
+  </noscript>
+
+</body>
+
 </html>
