--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+
+  <link
+    rel="shortcut icon"
+    href="https://supabase.zapt.ai/storage/v1/render/image/public/icons/7a7d72c4-32b4-45a8-937b-0d2ab248ae7b/95f5ce22-ae3f-4ad8-af77-d0c3884ee556.png?width=512&height=512"
+  />
 
   <!-- Meta tags for SEO -->
   <meta name="description" content="ZAPT - Create AI apps in seconds without coding. Transform your ideas into powerful AI applications effortlessly." />
