--- a/index.html
+++ b/index.html
@@ -24,38 +24,22 @@
   />
 
   <!-- Meta tags for SEO -->
-  <meta name="description" content="ZAPT - Create AI apps in seconds without coding. Transform your ideas into powerful AI applications effortlessly." />
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "SoftwareApplication",
-      "name": "ZAPT",
-      "description": "Create AI apps in seconds without coding. Transform your ideas into powerful AI applications effortlessly.",
-      "applicationCategory": "AI Development Tool"
-    }
-  </script>
-  <meta property="description" content="Effortless AI App Creation" />
-  <meta name="keywords" content="ChatGPT, AI, ZAPT, Chatbot, App Store, GPT, OpenAI" />
+  <meta name="description" content="Learn how ZAPT.AI enables you to create powerful AI applications effortlessly without any coding required. Discover the seamless process and transparent pricing model." />
+  <script type="application/ld+json" src="scripts/head-scripts.js"></script>
+  <meta name="keywords" content="AI app creation, no coding required, build apps effortlessly, ChatGPT, AI, ZAPT, Chatbot, App Store, GPT, OpenAI" />
 
   <!-- Open Graph meta tags for Facebook and LinkedIn -->
   <meta property="og:title" content="ZAPT" />
-  <meta property="og:description" content="Effortless AI App Creation" />
-  <meta property="og:image"
-    content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
+  <meta property="og:description" content="Learn how ZAPT.AI enables you to create powerful AI applications effortlessly without any coding required. Discover the seamless process and transparent pricing model." />
+  <meta property="og:image" content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
   <meta property="og:url" content="https://www.zapt.ai/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card meta tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="ZAPT" />
-  <meta name="twitter:description" content="Effortless AI App Creation" />
-  <meta name="twitter:image"
-    content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
-
-  <title>ZAPT - Create AI Apps in Seconds | No Coding Required</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
-    crossorigin="anonymous">
+  <meta name="twitter:description" content="Learn how ZAPT.AI enables you to create powerful AI applications effortlessly without any coding required. Discover the seamless process and transparent pricing model." />
+  <meta name="twitter:image" content="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/socials_logo.png?t=2024-01-11T12%3A55%3A37.219Z" />
 
   <!-- Google tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CW5HTXTBR9">
