--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <link
     rel="shortcut icon"
-    href="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/Zapt_Navy_Logo.png?width=512&height=512"
+    href="https://supabase.zapt.ai/storage/v1/object/public/zapt-branding/ZAPT_logo.jpeg?width=512&height=512"
   />
 
   <!-- Meta tags for SEO -->
